[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/player.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.5

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[node name="Player" type="RigidBody2D"]
collision_mask = 53
mode = 2
physics_material_override = SubResource( 6 )
gravity_scale = 10.0
continuous_cd = 2
contacts_reported = 4
contact_monitor = true
linear_damp = 0.1
script = ExtResource( 2 )
speed = 100.0
ground_speed_delta = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 7 )

[node name="ItemSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
z_index = 1

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.37091e-06, 0.999999 )
scale = Vector2( 2.1, 2.1 )

[node name="Area2DGround" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DGround"]
position = Vector2( 0, 9 )
shape = SubResource( 8 )

[node name="Area2DLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
position = Vector2( -6, 1 )
shape = SubResource( 8 )

[node name="Area2DRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRight"]
position = Vector2( 5, 1 )
shape = SubResource( 8 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
